# cafe

./: .gitignore  .mypy.ini  LICENSE  README.md  explainer.py  profiler.py  pyproject.toml  requirements.txt
cafe/: __init__.py  explainer.py  profiler.py
cafe/cli/: profile.py
pilot-study/assignment/: assignment.json  explainer.py  grade.sh  grader.py  graph.py  profiler.py  setup.sh  util.py
pilot-study/assignment/src/: main.py
pilot-study/assignment/submission/: solution.py
pilot-study/assignment/test-submissions/crash/: main.py  solution.py
pilot-study/assignment/test-submissions/double-push/: solution.py
pilot-study/assignment/test-submissions/missing-visited-add/: main.py
pilot-study/assignment/test-submissions/solution/: main.py  solution.py
scripts/: check_lint.sh  check_python_version.sh  check_strict_types.sh  check_style.sh  check_types.sh  gen_docs.sh
study/: INSTRUCTIONS.md
study/assignment/: README.md  assignment.json  grade.sh  grader.py  setup.sh  solution.json
study/assignment/src/: main.py
study/assignment/test-submissions/crash/: main.py
study/assignment/test-submissions/not_implemented/: main.py
